--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: 'Merriweather', serif;
-  background-color: #f9fafc;
+  background-color: #ebf2ff;
 }
 
 .navbar {
@@ -23,7 +23,7 @@ body {
   width: 100%;
 }
 
-.nav__item {
+.button__primary {
   background-image: linear-gradient(to right,
     #ff512f 0%,
     #dd2476 51%,
@@ -37,9 +37,31 @@ body {
 
 }
 
-.nav__item:hover {
+.button__primary:hover {
   border: 2px solid #ff8fab;
   cursor: pointer;
+}
+
+.container {
+  padding: 20px 20px;
+  margin: 0 auto;
+}
+
+.hero__image__container {
+  width: 100%;
+}
+
+.hero__image {
+  width: 100%;
+  border-radius:10px;
+  box-shadow: 0 25px 50px -12px rgb(0 0 0 / 25%);
+}
+
+.hero__text {
+  font-size: 30px;
+  margin: 20px 0px;
+  color: #1d3557;
+  font-weight: 800;
 }
 
 @media (min-width : 768px){
@@ -49,15 +71,36 @@ body {
     padding-top: 10px;
     padding-right: 30px;
   }
+
+  .hero__container {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
 }
 
 @media (min-width : 1024px){
+  .container {
+    max-width: 70%;
+  }
   .navbar__brand {
     width: 150px;
   }
-  .nav__item {
+  .button__primary {
     padding: 20px;
     font-size: 20px;
 
   }
+
+  .hero__description {
+    width: 100%;
+
+  }
+
+  .hero__text {
+    font-size: 48px;
+  }
 }
+
+/* container is a bootstrap class that provides the entire padding and margin throughout the webpage */
