--- a/style.css
+++ b/style.css
@@ -64,6 +64,35 @@ body {
   font-weight: 800;
 }
 
+
+
+.explore__menu__text {
+  color: #1d3557;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-weight: 800;
+
+}
+
+.food__card {
+  background-color: #edf2ff;
+}
+
+.food__card__image__container {
+  width : 100%;
+}
+
+.food__card__description {
+  padding: 15px;
+}
+
+.food__image {
+  border-radius: 8px 8px 0px 0px;
+  width: 100%
+
+}
+
 @media (min-width : 768px){
   .navbar {
     justify-content: space-between;
@@ -73,11 +102,52 @@ body {
   }
 
   .hero__container {
+    padding-bottom: 25px;
+  }
+
+  .hero__container {
     margin-top: 20px;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
   }
+
+  .explore__menu__lists {
+    display: flex;
+    grid-gap: 15px;
+  }
+
+  #pizza__card {
+    margin-top: -20px;
+    margin-bottom: 30px;
+  }
+
+  .explore__menu__lists {
+    margin-top: 45px;
+    padding: 45px;
+}
+
+.explore__menu__container {
+  position: relative;
+}
+
+.explore__menu__gradient__background {
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right,
+    #ff512f 0%,
+    #dd2476 51%,
+    #ff512f 100%
+  );
+  z-index: -3;
+  transform: skewY(-5deg);
+
+
+}
+
 }
 
 @media (min-width : 1024px){
@@ -93,6 +163,10 @@ body {
 
   }
 
+  .hero__container {
+    padding-bottom: 25px;
+  }
+
   .hero__description {
     width: 100%;
 
@@ -100,6 +174,36 @@ body {
 
   .hero__text {
     font-size: 48px;
+  }
+
+  .explore__menu__lists {
+    grid-gap: 30px;
+    padding: 45px;
+  }
+
+  .explore__menu__text {
+    font-size: 48px;
+  }
+
+  .explore__menu__container {
+    position: relative;
+  }
+
+  .explore__menu__gradient__background {
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right,
+      #ff512f 0%,
+      #dd2476 51%,
+      #ff512f 100%
+    );
+    z-index: -3;
+    transform: skewY(-5deg);
+
+
   }
 }
 
